# lawform-ai-plugin

./: CLAUDE.md  README.md  install.sh
for-adkcode/: .mcp.json  README.md
for-adkcode/.claude-plugin/: plugin.json
for-adkcode/commands/: lawyer.md  review.md
for-adkcode/skills/lawform-lawyer/: SKILL.md
for-adkcode/skills/lawform-review/: SKILL.md
for-antigravity/: GEMINI.md  README.md  mcp_config.json
for-antigravity/.agent/skills/lawform-lawyer/: SKILL.md
for-antigravity/.agent/skills/lawform-review/: SKILL.md
for-chatgpt-codex/: AGENTS.md  README.md
for-claude-code/: README.md
for-codex/: README.md  config.toml
for-codex-appserver/: AGENTS.md  README.md
for-copilot-cli/: AGENTS.md  README.md  mcp-config.json
for-gemini-cli/: GEMINI.md  README.md  settings.json
for-gocode/: AGENTS.md  README.md
for-google-adk/: README.md  pyproject.toml
for-google-adk/lawform_agent/: .env.example  agent.py
for-openclaw/: README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
for-opencode/: AGENTS.md  README.md  opencode.json
for-qwen-code/: AGENTS.md  README.md
